--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php" : ">=7.0"
+        "php": ">=7.0",
+        "ext-redis": "*",
+        "ext-json": "*"
     },
     "autoload":{
         "psr-4":{
